<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fruithub.fragment.addcard.AddCardViewModel" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            tools:context=".fragment.addcard.AddCardFragment">


            <androidx.cardview.widget.CardView
                android:id="@+id/crossCardView"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/_100sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_17sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/cross" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/detailTextView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_53sdp"
                android:fontFamily="@font/ttnorms_regular"
                android:text="@string/card_holder_detail"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/detailEditText"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/hintDetail"
                android:inputType="textPostalAddress"
                android:padding="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/numberTextView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/ttnorms_regular"
                android:text="@string/card_number"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/numberEditText"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:hint="@string/numberHint"
                android:inputType="number"
                android:padding="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dateTextView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/ttnorms_regular"
                android:text="@string/date"
                android:textColor="@color/paua"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberEditText" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dateEditText"
                style="@style/EditTextStyle"
                android:layout_width="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/dateHint"
                android:inputType="date"
                android:padding="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cvvTextView"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/ttnorms_regular"
                android:text="@string/cvv"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateTextView"
                app:layout_constraintTop_toTopOf="@id/dateTextView" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cvvEditText"
                style="@style/EditTextStyle"
                android:layout_width="@dimen/_120sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_minus9sdp"
                android:hint="@string/dateHint"
                android:inputType="number"
                android:padding="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="@+id/dateEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/dateEditText" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/completeOrder"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/complete_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvvEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</layout>