<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fruithub.fragment.ordercomplete.OrderCompleteViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.ordercomplete.OrderCompleteFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/orderImageView"
                android:layout_width="@dimen/_164sdp"
                android:layout_height="@dimen/_164sdp"
                android:layout_marginTop="@dimen/_90sdp"
                android:src="@drawable/order_complete_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/orderTextView"
                style="@style/TextViewStyle"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/ttnorms_regular"
                android:text="@string/order_taken"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderImageView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/orderDetailTextView"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:fontFamily="@font/ttnorms_light"
                android:maxLines="2"
                android:gravity="center"
                android:text="@string/order_detail"
                android:textColor="@color/dark_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/trackOrderButton"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/_42sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/track_order"
                app:layout_constraintBottom_toTopOf="@+id/continueButton"
                app:layout_constraintDimensionRatio="H,1:3.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orderDetailTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueButton"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/continue_shopping"
                android:textColor="@color/orange"
                app:backgroundTint="@color/seashell"
                android:textSize="@dimen/_11ssp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,1:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>